--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "firebase": "^10.8.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "swiper": "9",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -45,6 +50,7 @@
     "@emotion/babel-plugin": "^11.11.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@types/eslint": "^8",
+    "@types/lodash": "^4.14.202",
     "@types/testing-library__jest-dom": "^6.0.0",
     "craco-alias": "^3.0.1",
     "eslint": "^8.56.0",
