--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -10,7 +10,7 @@
       "@models/*": ["src/models/*"],
       "@pages/*": ["src/pages/*"],
       "@remote/*": ["src/remote/*"],
-      "@constants/*": ["src/constants/index"],
+      "@constants": ["src/constants/index"],
       "@constants/*": ["src/constants/*"],
       "@atoms/*": ["src/atoms/*"],
       "@hooks/*": ["src/hooks/*"]
