--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.8.0",
     "framer-motion": "^11.0.6",
     "lodash": "^4.17.21",
+    "lodash.flatten": "^4.4.0",
     "qs": "^6.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -55,6 +56,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@types/eslint": "^8",
     "@types/lodash": "^4.14.202",
+    "@types/lodash.flatten": "^4.4.9",
     "@types/qs": "^6.9.14",
     "@types/testing-library__jest-dom": "^6.0.0",
     "@types/validator": "^13.11.9",
